# epub2txt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
epub2txt/: __init__.py  __main__.py  browse_filename.py  epub2txt.py  gen_filename.py
tests/: 1.tmx.epub  test.epub  test.txt  test_epub2txt.py  test_epub2txt_http.py  test_epub2txt_local.py
